force-app/main/default/objects/pefindo_credit_summary__c/pefindo_credit_summary__c.object-meta.xml
<CustomObject>
    <label>Pefindo Credit Summary</label>
    <nameField>
        <label>Pefindo Credit Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pefindo Credit Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>