force-app/main/default/objects/pefindo_credit_summary__c/fields/contract_status__c.field-meta.xml
<CustomField>
    <fullName>contract_status__c</fullName>
    <label>contract_status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>