force-app/main/default/objects/pefindo_credit_summary__c/fields/contract_status_code__c.field-meta.xml
<CustomField>
    <fullName>contract_status_code__c</fullName>
    <label>contract_status_code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>