force-app/main/default/objects/pefindo_credit_summary__c/fields/creditor_name__c.field-meta.xml
<CustomField>
    <fullName>creditor_name__c</fullName>
    <label>creditor_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>