force-app/main/default/objects/pefindo_credit_summary__c/fields/creditor_type_code__c.field-meta.xml
<CustomField>
    <fullName>creditor_type_code__c</fullName>
    <label>creditor_type_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>