force-app/main/default/objects/pefindo_credit_summary__c/fields/customer_name__c.field-meta.xml
<CustomField>
    <fullName>customer_name__c</fullName>
    <label>customer_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>