force-app/main/default/objects/pefindo_credit_summary__c/fields/facility_type__c.field-meta.xml
<CustomField>
    <fullName>facility_type__c</fullName>
    <label>facility_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>