force-app/main/default/objects/pefindo_credit_summary__c/fields/freq_pd_over_60__c.field-meta.xml
<CustomField>
    <fullName>freq_pd_over_60__c</fullName>
    <label>freq_pd_over_60</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>