force-app/main/default/objects/pefindo_credit_summary__c/fields/installment_type__c.field-meta.xml
<CustomField>
    <fullName>installment_type__c</fullName>
    <label>installment_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>