force-app/main/default/objects/pefindo_credit_summary__c/fields/interest_rate__c.field-meta.xml
<CustomField>
    <fullName>interest_rate__c</fullName>
    <label>interest_rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>