force-app/main/default/objects/pefindo_credit_summary__c/fields/interest_wop__c.field-meta.xml
<CustomField>
    <fullName>interest_wop__c</fullName>
    <label>interest_wop</label>
    <length>255</length>
    <type>Text</type>
</CustomField>