force-app/main/default/objects/pefindo_credit_summary__c/fields/last_collection_status_code__c.field-meta.xml
<CustomField>
    <fullName>last_collection_status_code__c</fullName>
    <label>last_collection_status_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>