force-app/main/default/objects/pefindo_credit_summary__c/fields/last_due_days__c.field-meta.xml
<CustomField>
    <fullName>last_due_days__c</fullName>
    <label>last_due_days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>