force-app/main/default/objects/pefindo_credit_summary__c/fields/maturity_date__c.field-meta.xml
<CustomField>
    <fullName>maturity_date__c</fullName>
    <label>maturity_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>