force-app/main/default/objects/pefindo_credit_summary__c/fields/note__c.field-meta.xml
<CustomField>
    <fullName>note__c</fullName>
    <label>note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>