force-app/main/default/objects/pefindo_credit_summary__c/fields/ntf__c.field-meta.xml
<CustomField>
    <fullName>ntf__c</fullName>
    <label>ntf</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>