force-app/main/default/objects/pefindo_credit_summary__c/fields/outstanding_amount__c.field-meta.xml
<CustomField>
    <fullName>outstanding_amount__c</fullName>
    <label>outstanding_amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>