force-app/main/default/objects/pefindo_credit_summary__c/fields/pefindo_id__c.field-meta.xml
<CustomField>
    <fullName>pefindo_id__c</fullName>
    <label>pefindo_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>