force-app/main/default/objects/pefindo_credit_summary__c/fields/phase_of_contract__c.field-meta.xml
<CustomField>
    <fullName>phase_of_contract__c</fullName>
    <label>phase_of_contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>