force-app/main/default/objects/pefindo_credit_summary__c/fields/plafon__c.field-meta.xml
<CustomField>
    <fullName>plafon__c</fullName>
    <label>plafon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>