force-app/main/default/objects/pefindo_credit_summary__c/fields/subject_check__c.field-meta.xml
<CustomField>
    <fullName>subject_check__c</fullName>
    <label>subject_check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>