force-app/main/default/objects/pefindo_credit_summary__c/fields/total_tenor__c.field-meta.xml
<CustomField>
    <fullName>total_tenor__c</fullName>
    <label>total_tenor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>